# peisear

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  NOTICE  README.md  ROADMAP.md  TERMS_OF_USE.md  cargo-publish.sh
.github/: CONTRIBUTING.md  SECURITY.md
crates/peisear/: Cargo.toml
crates/peisear-auth/: Cargo.toml  README.md
crates/peisear-auth/src/: jwt.rs  lib.rs  password.rs
crates/peisear-core/: Cargo.toml  README.md
crates/peisear-core/src/: lib.rs
crates/peisear-storage/: Cargo.toml  README.md
crates/peisear-storage/migrations/: 0001_initial.sql
crates/peisear-storage/src/: issues.rs  lib.rs  pool.rs  projects.rs  users.rs
crates/peisear-web/: Cargo.toml  README.md
crates/peisear-web/src/: app.rs  components.rs  config.rs  error.rs  extractors.rs  lib.rs  main.rs  state.rs
crates/peisear-web/src/components/: auth.rs  error_page.rs  issues.rs  layout.rs  projects.rs
crates/peisear-web/src/handlers/: auth.rs  issues.rs  projects.rs  root.rs
crates/peisear/src/: lib.rs  main.rs
docs/: README.md
docs/architecture/: README.md  crate-boundaries.md  leptos-ssr.md  overview.md  workspace-layout.md
docs/getting-started/: README.md  configuration.md  first-run.md  installation.md
docs/guides/: README.md  hydration-upgrade.md
docs/operations/: README.md  backup.md  deployment.md  tailwind-local.md
docs/security/: README.md  hardening.md
infra/: README.md
src/: auth.rs  db.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  views.rs
src/auth/: jwt.rs  password.rs
src/db/: issues.rs  pool.rs  projects.rs  users.rs
src/handlers/: auth.rs  issues.rs  projects.rs  root.rs
static/: app.css  board.js
templates/: _app_base.html  base.html  error.html  issue_detail.html  issue_new.html  login.html  project_detail.html  project_edit.html  project_new.html  projects_list.html  register.html
