[package]
name = "peisear-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Password hashing and JWT helpers, framework-agnostic."
readme = "README.md"

[dependencies]
argon2 = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
