[package]
name = "peisear-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Domain types shared across the peisear workspace."

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
