[package]
name = "peisear-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Domain types shared across the peisear workspace."
readme = "README.md"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
