[package]
name = "peisear-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Axum + Leptos SSR HTTP layer for peisear (issue tracker). Library only — the runnable binary lives in the `peisear` facade crate."
readme = "README.md"

# Library only. The runnable binary is owned by the `peisear` facade
# crate so that `cargo install peisear` is the public entry point.
# Integration tests still get to import the router and handlers via
# this lib target.
[lib]
path = "src/lib.rs"

[dependencies]
peisear-core = { workspace = true }
peisear-auth = { workspace = true }
peisear-storage = { workspace = true }

axum = { workspace = true }
axum-extra = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
leptos = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
