[package]
name = "peisear"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "../../README.md"

[dependencies]
peisear-core = { path = "../peisear-core", version = "0.2.2" }
peisear-auth = { path = "../peisear-auth", version = "0.2.2" }
peisear-storage = { path = "../peisear-storage", version = "0.2.2" }
peisear-web = { path = "../peisear-web", version = "0.2.2" }
