[package]
name = "peisear"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "../../README.md"

[dependencies]
peisear-core = { workspace = true }
peisear-auth = { workspace = true }
peisear-storage = { workspace = true }
peisear-web = { workspace = true }
